css/style.css
/*
Project Name: Relaxr Landing Page
Client: Relaxr
Author: Blair McDonald
Developer Blair McDonald @GA in NYC
*/


/******************************************
/* SETUP
/*******************************************/


/* Box Model Hack */

* {
    -moz-box-sizing: border-box;
    /* Firexfox */
    -webkit-box-sizing: border-box;
    /* Safari/Chrome/iOS/Android */
    box-sizing: border-box;
    /* IE */
}

/* Better font rendering */

* {
    -moz-osx-font-smoothing: grayscale;
    /* Firexfox */
    -webkit-font-smoothing: antialiased;
    /* Safari/Chrome/iOS/Android */
}

/* Clear fix hack */

.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear {
    clear: both;
}

.alignright {
    float: right;
    padding: 0 0 10px 10px;
    /* note the padding around a right floated image */
}

.alignleft {
    float: left;
    padding: 0 10px 10px 0;
    /* note the padding around a left floated image */
}


/******************************************
/* BASE STYLES
/*******************************************/

body, a {
    color: #fff;
    font-size: 26px;
    line-height: 1.4;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

q {
    font-size: 26px;
    font-weight: 300italic;
}

/******************************************
/* LAYOUT
 


/* Center the container */

#hero {
    width: 100%;
    height: 700px;
    margin: auto;
    background: url(../images/header_bg.jpg) no-repeat center top rgb(134, 141, 157);
    background-size: cover;
}

#benefits {
    width: 100%;
    max-height: 620px;
}

#testimonial {
    width: 100%;
    height: 400px;
    margin: auto;
    background: url(../images/testimonial_bg.jpg) no-repeat center top rgb(134, 141, 157);
    background-size: cover;
}

.fullstrip {
    background: #f9e42e;
}

.container {
    max-width: 980px;
    padding: 10px;
    margin: auto;
}

#hero .container {
    height: 700px;
    padding-top: 20px;
}

#benefits .container {
    height: 620px;
}

#testimonial .container {
    height: 400px; 
}


.row {
    position: relative;
    padding: 0 20px;
    top: 50%;
    transform: translateY(-50%);
}

#hero .row {
    top: 21%;
    transform: translateY(-21%);
}

.centre-content {
    text-align: center;
}

.column {
    display: block;
    margin: auto;
    max-width: 610px;
}

footer {
    background-color: #121211;
    height: 350px;
}


/******************************************
/* ADDITIONAL STYLES
/*******************************************/

.logo a {
    display: inline-block;
    margin-bottom: 0;
    font-size: 48px;
    font-weight: 800;
    text-decoration: none;
}

footer a {
    color: #f9e42e;
}

h1 {
    margin: 0 0 50px 0;
    font-size: 48px;
    font-weight: 600;
    line-height: 1.2;
}

h2 {
    margin-top: 0;
    color: #033048;
    font-size: 40px;
    font-weight: 600;
}

h3 {
    font-weight: 600;
}

/* Removed styling from style guide and changed to match visual design

h4 {
    font-size: 24px;
    font-weight: 800;
    color: #f8e42d;
} */

h5 {
    font-size: 18px;
    font-weight: 600;
}

h6 {
    font-size: 28px;
    font-weight: 600;
    color: #033048;
}

p, li {
    color: #606161;
}

.btn-primary {
    display: inline-block;
    margin: 30px auto;
    padding: 10px 60px;
    -webkit-border-radius: 5;
    -moz-border-radius: 5;
    border-radius: 5px;
    background: #f9e42e;
    font-size: 28px;
    font-weight: 800;
    color: #033048;
    text-decoration: none;
    text-align: center;
}

.btn-primary:hover {
    background: #fafa03;
    text-decoration: none;
}

 .btn-secondary {
    display: inline-block;
    margin: 30px auto;
    padding: 10px 60px;
    -webkit-border-radius: 5;
    -moz-border-radius: 5;
    border-radius: 5px;
    background: #043049;
    font-size: 24px;
    font-weight: 800;
    text-decoration: none;
    text-align: center;
}

.btn-secondary:hover {
    background: #094667;
    text-decoration: none;
}

.social {
    display: block;
    margin-top: 30px;
}

.twitter {
    display: inline-block;
    position: relative;
    width: 45px;
    height: 35px;
    margin: 25px;
    background-image: url(/images/twitter.png);
    background-repeat: no-repeat;
    background-position: center;
}

.facebook {
    display: inline-block;
    position: relative;
    width: 45px;
    height: 35px;
    margin: 25px;
    background-image: url(/images/facebook.png);
    background-repeat: no-repeat;
    background-position: center;
}

